--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "next-themes": "^0.4.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "recharts": "^3.4.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.1.0",
     "tailwindcss": "^4.1.13",
