--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,4 @@ SUPABASE_URL=###
 SUPABASE_KEY=###
 SUPABASE_SERVICE_ROLE_KEY=###
 OPENROUTER_API_KEY=###
+OPENROUTER_MODEL=meta-llama/llama-3.2-3b-instruct:free
