chore: implemented auto-categorisation of transactions with ai

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,23 @@
 SUPABASE_URL=###
 SUPABASE_KEY=###
 SUPABASE_SERVICE_ROLE_KEY=###
+
+# OpenRouter API Configuration
+# Get your API key from: https://openrouter.ai/keys
 OPENROUTER_API_KEY=###
-OPENROUTER_MODEL=meta-llama/llama-3.2-3b-instruct:free
+
+# Primary model to use for AI categorization (optional)
+# If not set, will use default fallback models
+# Examples:
+# - google/gemini-2.0-flash-exp:free (free, fast)
+# - meta-llama/llama-3.2-3b-instruct:free (free, good quality)
+# - openai/gpt-4o-mini (paid, excellent quality)
+# - anthropic/claude-3.5-sonnet (paid, best quality)
+OPENROUTER_MODEL=meta-llama/llama-3.3-70b-instruct:free
+
+# Fallback models to try if primary model fails (optional)
+# Comma-separated list of model identifiers
+# If not set, will use default: free models → paid models
+# Examples:
+OPENROUTER_FALLBACK_MODELS=meta-llama/llama-3.2-3b-instruct:free,google/gemini-2.0-flash-exp:free,google/gemma-3n-e2b-it:free,amazon/nova-2-lite-v1:free
+OPENROUTER_FALLBACK_MODELS=
