--- a/.env.example
+++ b/.env.example
@@ -21,3 +21,8 @@ OPENROUTER_MODEL=meta-llama/llama-3.3-70b-instruct:free
 # Examples:
 OPENROUTER_FALLBACK_MODELS=meta-llama/llama-3.2-3b-instruct:free,google/gemini-2.0-flash-exp:free,google/gemma-3n-e2b-it:free,amazon/nova-2-lite-v1:free
 OPENROUTER_FALLBACK_MODELS=
+
+# E2E Test User Credentials
+E2E_USERNAME_ID=###
+E2E_USERNAME=###
+E2E_PASSWORD=###
