--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -51,40 +51,26 @@ jobs:
           cache: "npm"
       - run: npm ci
       - run: npx playwright install --with-deps
-      - run: npm run test:e2e -- --coverage
-      - uses: actions/upload-artifact@v4
-        with:
-          name: e2e-coverage
-          path: coverage/
+      - run: npm run test:e2e -- --update-snapshots
   pr-comment:
     runs-on: ubuntu-latest
+    permissions:
+      pull-requests: write
     if: always()
     needs: [lint, unit-test, e2e-test]
     steps:
-      - uses: actions/checkout@v6
       - uses: actions/github-script@v8
         with:
           script: |
-            const { data: checks } = await github.rest.checks.listForRef({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              ref: context.sha
-            });
+            const lintStatus = '${{ needs.lint.result }}' === 'success' ? '✅ Passed' : '❌ Failed';
+            const unitTestStatus = '${{ needs.unit-test.result }}' === 'success' ? '✅ Passed' : '❌ Failed';
+            const e2eTestStatus = '${{ needs.e2e-test.result }}' === 'success' ? '✅ Passed' : '❌ Failed';
 
-            const jobStatuses = checks.check_runs.reduce((acc, check) => {
-              acc[check.name] = check.conclusion || check.status;
-              return acc;
-            }, {});
-
-            const lintStatus = jobStatuses['lint'] === 'success' ? '✅ Passed' : '❌ Failed';
-            const unitTestStatus = jobStatuses['unit-test'] === 'success' ? '✅ Passed' : '❌ Failed';
-            const e2eTestStatus = jobStatuses['e2e-test'] === 'success' ? '✅ Passed' : '❌ Failed';
-
-            const allPassed = jobStatuses['lint'] === 'success' && jobStatuses['unit-test'] === 'success' && jobStatuses['e2e-test'] === 'success';
+            const allPassed = '${{ needs.lint.result }}' === 'success' && '${{ needs.unit-test.result }}' === 'success' && '${{ needs.e2e-test.result }}' === 'success';
 
             const body = allPassed 
-              ? `🎉 All checks passed successfully!\n\n- Lint: ${lintStatus}\n- Unit Tests: ${unitTestStatus}\n- E2E Tests: ${e2eTestStatus}\n\nCoverage reports are available in the artifacts: [Unit Coverage](https://github.com/${context.repo.owner}/${context.repo.repo}/actions/runs/${context.runId}) and [E2E Coverage](https://github.com/${context.repo.owner}/${context.repo.repo}/actions/runs/${context.runId}).`
-              : `❌ Some checks failed. Please review the errors.\n\n- Lint: ${lintStatus}\n- Unit Tests: ${unitTestStatus}\n- E2E Tests: ${e2eTestStatus}\n\nCheck the workflow run for details: https://github.com/${context.repo.owner}/${context.repo.repo}/actions/runs/${context.runId}`;
+              ? `🎉 All checks passed successfully!\n\n- Lint: ${lintStatus}\n- Unit Tests: ${unitTestStatus}\n- E2E Tests: ${e2eTestStatus}\n\nCoverage report is available in the artifacts: [Unit Coverage](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}).`
+              : `❌ Some checks failed. Please review the errors.\n\n- Lint: ${lintStatus}\n- Unit Tests: ${unitTestStatus}\n- E2E Tests: ${e2eTestStatus}\n\nCheck the workflow run for details: https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}`;
 
             await github.rest.issues.createComment({
               issue_number: context.issue.number,
